Fix bug on Binary Search and Add Extension Recommendations

--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -26,7 +26,7 @@
     "public int BinarySearch(int[] input, int searchTerm)\n",
     "{\n",
     "    var bottom = 0;\n",
-    "    var top = input.Length;\n",
+    "    var top = input.Length - 1;\n",
     "    var result = -1;\n",
     "\n",
     "    while(bottom <= top)\n",
@@ -67,15 +67,10 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "System.IndexOutOfRangeException: Index was outside the bounds of the array.\r\n   at Submission#20.BinarySearch(Int32[] input, Int32 searchTerm)\r\n   at Submission#34.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
-     "output_type": "error",
-     "traceback": [
-      "System.IndexOutOfRangeException: Index was outside the bounds of the array.\r\n",
-      "   at Submission#20.BinarySearch(Int32[] input, Int32 searchTerm)\r\n",
-      "   at Submission#34.<<Initialize>>d__0.MoveNext()\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 5 is located at index: 1"
      ]
     }
    ],
@@ -98,8 +93,8 @@
     "}\n",
     "\n",
     "// Play around with these variables to see how the algorithm behaves in different scenarios.\n",
-    "var arr = new int[] {1,3,7,9};\n",
-    "var searchTerm = 100;\n",
+    "var arr = new int[] {1,5,9,100};\n",
+    "var searchTerm = 5;\n",
     "\n",
     "var result = BinarySearch(arr, searchTerm);\n",
     "\n",
