--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -4,10 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Binary Search using arrays.\n",
+    "## Binary Search using arrays."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Description\n",
     "The algorithm `BinarySearch` takes in an array of integers `input` and finds the index of the desired integer `searchTerm`.\n",
     "\n",
-    "If the `input` does not contain the `searchTerm`, the function returns a `-1`."
+    "If the `input` does not contain the `searchTerm`, the function returns a `-1`.\n",
+    "\n",
+    "Steps:\n",
+    "1. Identify the middle value to split the array in 2; upper half and lower half.\n",
+    "2. Compare whether the `searchTerm` is equal to, less than , or greater than the middle value.\n",
+    "3. If the `searchTerm` is less than the middle value, we can eliminate the upper half.\n",
+    "4. If the `searchTerm` is greater than the middle value, we can eliminate the bottom half.\n",
+    "5. Repeat these steps until we have found the value, or we can't split the array any more.\n",
+    "\n",
+    "It is **important to note** that in order for this algorithm to work, **the elements of the array need to be in ascending order. An unordered array will not work.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example:\n",
+    "Let's say we have the following `input = [1,5,8,9,10]` and we wanted to find the index for number 5. Following the steps above we will: \n",
+    "1. Identify the middle to be number 8.\n",
+    "2. Since 5 is less than 8, we can get rid of the upper half including the 8: [1,5,~~8,9,10~~].\n",
+    "3. Identify the middle to be 1. *(C# rounds integer division to the lowest integer: 1/2 = 0)*\n",
+    "4. Since 5 is greater than 8, we can get rid of the lower half: [~~1~~,5].\n",
+    "5. Identify the middle to be number 5. (Last remaining number)\n",
+    "6. 5 equals 5; we found our number."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Big O\n",
+    "BinarySearch has a Big O notation of `O(log N)`"
    ]
   },
   {
