--- a/DataStructures101/stack.ipynb
+++ b/DataStructures101/stack.ipynb
@@ -19,7 +19,7 @@
     "2. Pop (removing elements from the stack)\n",
     "3. Peek (looking at the contents of the top element without removing it)\n",
     "\n",
-    "`C#` and many popular languages have a built in stack implementation. For `C#` we have the `Stack` class. Don't quote me on this, but I am pretty sure many languages use a dynamically sized array under the hood to implement the Stack class. Below you can find a block of code that mimis the behavior of the dirty plates example above."
+    "`C#` and many popular languages have a built in stack implementation. For `C#` we have the `Stack` class. Don't quote me on this, but I am pretty sure many languages use a dynamically sized array under the hood to implement the Stack class. Below you can find a block of code that mimics the behavior of the dirty plates example above."
    ]
   },
   {
@@ -108,7 +108,8 @@
    ],
    "source": [
     "// pretty cool how we can share variables between blocks in these notebooks, huh?\n",
-    "stack.Pop()"
+    "stack.Pop()\n",
+    "// nasty error below"
    ]
   }
  ],
