Make illustrations local

--- a/DataStructures101/stack.ipynb
+++ b/DataStructures101/stack.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "### Example\n",
     "In the illustration bellow, block 8 would be the first plate you stacked and block 5 would be the last one you stacked. However, block 5 would be the first plate you wash, and block 8 would be the last one.\n",
-    "![Stack Animation](https://deepblade.com/wp-content/uploads/2022/04/stackgif.gif)\n",
+    "![Stack Animation](../illustrations/stackgif.gif)\n",
     "\n",
     "### Operations\n",
     "This data structure supports 3 major operations:\n",
