Credit where it's due

--- a/DataStructures101/queue.ipynb
+++ b/DataStructures101/queue.ipynb
@@ -13,6 +13,8 @@
     "In the illustration bellow, block 8 would be the first customer in line and block 5 would be the last customer.\n",
     "![queue Animation](../illustrations/queuegif.gif)\n",
     "\n",
+    "<font size=\"1\">image source: [deepblade.com](https://deepblade.com/)</font>\n",
+    "\n",
     "### Operations\n",
     "This data structure supports 3 major operations:\n",
     "1. Enqueue (adding elements to the queue)\n",
