--- a/DataStructures101/stack.ipynb
+++ b/DataStructures101/stack.ipynb
@@ -13,6 +13,8 @@
     "In the illustration bellow, block 8 would be the first plate you stacked and block 5 would be the last one you stacked. However, block 5 would be the first plate you wash, and block 8 would be the last one.\n",
     "![Stack Animation](../illustrations/stackgif.gif)\n",
     "\n",
+    "<font size=\"1\">image source: [deepblade.com](https://deepblade.com/)</font>\n",
+    "\n",
     "### Operations\n",
     "This data structure supports 3 major operations:\n",
     "1. Push (adding elements to the stack)\n",
