--- a/DataStructures101/hashmap-dictionary.ipynb
+++ b/DataStructures101/hashmap-dictionary.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "Console.WriteLine($\"Total # of contacts: {phonebook.Count}\");\n",
     "\n",
-    "// retrieve a persons phone number\n",
+    "// retrieve a person's phone number\n",
     "var momsNumber = phonebook[\"mom\"];\n",
     "Console.WriteLine($\"My mom's number is {momsNumber}\");\n",
     "\n",
