Practical example of binary search

--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -139,6 +139,66 @@
     "\n",
     "DisplayResult(searchTerm, result);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A problem you might encounter in a coding interview is to find the upper boundary of an array.\n",
+    "For example: given the array `[false, false, false, true, true]`, find the index of the first `true` value. You can use a similar `divide and conquer` approach as `Binary Search`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public int FindUpperBoundary(bool[] arr)\n",
+    "{\n",
+    "    var left = 0;\n",
+    "    var right = arr.Length - 1;\n",
+    "    var boundaryIndex = -1;\n",
+    "\n",
+    "    while (left <= right)\n",
+    "    {\n",
+    "        var middle = (left + right) / 2;\n",
+    "\n",
+    "        if (arr[middle] == false)\n",
+    "        {\n",
+    "            left = middle + 1;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            right = middle - 1;\n",
+    "            boundaryIndex = middle;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    return boundaryIndex;\n",
+    "}\n",
+    "\n",
+    "var arr = new bool[] {false,false,false,true,true};\n",
+    "\n",
+    "var result = FindUpperBoundary(arr);\n",
+    "\n",
+    "Console.WriteLine(result);"
+   ]
   }
  ],
  "metadata": {
