Display result in Bubble Sort

--- a/Sorting/BubbleSort.ipynb
+++ b/Sorting/BubbleSort.ipynb
@@ -39,7 +39,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\r\n"
+      "-4\r\n",
+      "1\r\n",
+      "1\r\n",
+      "2\r\n",
+      "3\r\n",
+      "6\r\n",
+      "8\r\n"
      ]
     }
    ],
@@ -68,7 +74,12 @@
     "    }\n",
     "    \n",
     "    return unsortedList;\n",
-    "}"
+    "}\n",
+    "\n",
+    "var nums = new List<int> {1,8,3,6,1,2,-4};\n",
+    "var result = BubbleSort(nums);\n",
+    "\n",
+    "result.ForEach(Console.WriteLine);"
    ]
   }
  ],
