Add another example for binary search

--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -199,6 +199,69 @@
     "\n",
     "Console.WriteLine(result);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another good example is a problem where given a sorted array and a `target` you have to find the index of the first element that is >= `target`. Example `nums = 1,5,6,8,9,11,13,16` and `target = 10` the answer is index = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\">5</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "public int FindFirstGreaterThanOrEqualElement(List<int> nums, int target)\n",
+    "{\n",
+    "    var result = 0;\n",
+    "    var top = nums.Count;\n",
+    "    var bottom = 0;\n",
+    "\n",
+    "    while (bottom <= top)\n",
+    "    {\n",
+    "        var middle = (bottom + top) / 2;\n",
+    "        var currentNum = nums[middle];\n",
+    "\n",
+    "        if (currentNum >= target)\n",
+    "        {\n",
+    "            result = middle;\n",
+    "            top = middle -1;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            bottom = middle + 1;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    return result;\n",
+    "}\n",
+    "\n",
+    "var nums = new List<int> {1,5,6,8,9,11,13,16};\n",
+    "var target = 10;\n",
+    "\n",
+    "var result = FindFirstGreaterThanOrEqualElement(nums, target);\n",
+    "\n",
+    "result.Display();"
+   ]
   }
  ],
  "metadata": {
