Add another binary search example

--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another good example is a problem where given a sorted array and a `target` you have to find the index of the first element that is >= `target`. Example `nums = 1,5,6,8,9,11,13,16` and `target = 10` the answer is index = 5"
+    "Another good example is a problem where given a sorted array and a `target` you have to find the index of the first element that is >= `target`. Return -1 if the index does not exist. Example `nums = 1,5,6,8,9,11,13,16` and `target = 10` the answer is index = 5."
    ]
   },
   {
@@ -232,8 +232,8 @@
    "source": [
     "public int FindFirstGreaterThanOrEqualElement(List<int> nums, int target)\n",
     "{\n",
-    "    var result = 0;\n",
-    "    var top = nums.Count;\n",
+    "    var result = -1;\n",
+    "    var top = nums.Count - 1;\n",
     "    var bottom = 0;\n",
     "\n",
     "    while (bottom <= top)\n",
@@ -259,6 +259,73 @@
     "var target = 10;\n",
     "\n",
     "var result = FindFirstGreaterThanOrEqualElement(nums, target);\n",
+    "\n",
+    "result.Display();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "source": [
+    "Yet another good example: given a sorted array and a `target` you have to find the index of the first ocurrence of `target`. If the target does not exist, return -1. Example `nums = 1,5,6,8,8,9,11,13,16` and `target = 8` the answer is index = 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\">9</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "public int FindFirstOccurence(List<int> nums, int target)\n",
+    "{\n",
+    "    var result = -1;\n",
+    "    var top = nums.Count - 1;\n",
+    "    var bottom = 0;\n",
+    "\n",
+    "    while (bottom <= top)\n",
+    "    {\n",
+    "        var middle = (bottom + top) / 2;\n",
+    "        var currentNum = nums[middle];\n",
+    "\n",
+    "        if (currentNum == target)\n",
+    "        {\n",
+    "            result = middle;\n",
+    "            top = middle - 1;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            bottom = middle + 1;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    return result;\n",
+    "}\n",
+    "\n",
+    "var nums = new List<int> {1,5,6,8,8,8,9,11,13,16};\n",
+    "var target = 16;\n",
+    "\n",
+    "var result = FindFirstOccurence(nums, target);\n",
     "\n",
     "result.Display();"
    ]
