Fix bug in binary search example

--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -289,7 +289,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"dni-plaintext\">9</div>"
+       "<div class=\"dni-plaintext\">1</div>"
       ]
      },
      "metadata": {},
@@ -313,6 +313,10 @@
     "            result = middle;\n",
     "            top = middle - 1;\n",
     "        }\n",
+    "        else if (currentNum > target)\n",
+    "        {\n",
+    "            top = middle - 1;\n",
+    "        }\n",
     "        else\n",
     "        {\n",
     "            bottom = middle + 1;\n",
@@ -322,8 +326,8 @@
     "    return result;\n",
     "}\n",
     "\n",
-    "var nums = new List<int> {1,5,6,8,8,8,9,11,13,16};\n",
-    "var target = 16;\n",
+    "var nums = new List<int> {2,3,5,7,11};\n",
+    "var target = 3;\n",
     "\n",
     "var result = FindFirstOccurence(nums, target);\n",
     "\n",
