--- a/BinarySearch/Intro.ipynb
+++ b/BinarySearch/Intro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Binary Search using arrays."
+    "## Intro to Binary Search"
    ]
   },
   {
