Add another advanced Binary Search example

--- a/BinarySearch/Advanced.ipynb
+++ b/BinarySearch/Advanced.ipynb
@@ -181,6 +181,92 @@
     "var result = MinMaxWeight(packagesWeights, 2);\n",
     "Console.WriteLine($\"You need a truck with a capacity of {r}\");"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another very similar example is given an array of times it takes to read some newspapers and a number of people to read them, what is the minimum amount of time it would take to have the people go through all the newspapers?\n",
+    "\n",
+    "### Example\n",
+    "Input: `times = [7,2,5,10,8]`, `people = 2`\n",
+    "\n",
+    "Output: `18`\n",
+    "\n",
+    "Why? Assign first 3 newspapers to one person then assign the rest to another. The time it takes for the first 3 newspapers is 7 + 2 + 5 = 14 and for the last 2 is 10 + 8 = 18."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You need 7 units of time.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public int MinMaxTime(List<int> times, int people)\n",
+    "{\n",
+    "    var minTime = 0;\n",
+    "    var bottom = times.Max();\n",
+    "    var top = times.Sum();\n",
+    "\n",
+    "    while (bottom <= top)\n",
+    "    {\n",
+    "        var middle = (bottom + top) / 2;\n",
+    "        if (IsTimeFeasible(times, middle, people))\n",
+    "        {\n",
+    "            minTime = middle;\n",
+    "            top = middle - 1;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            bottom = middle + 1;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    return minTime;\n",
+    "}\n",
+    "\n",
+    "public bool IsTimeFeasible(List<int> times, int targetTime, int numOfPeople)\n",
+    "{\n",
+    "    var maxTime = targetTime;\n",
+    "    var requiredPeople = 1;\n",
+    "    var i = 0;\n",
+    "\n",
+    "    while (i < times.Count)\n",
+    "    {\n",
+    "        if (times[i] <= maxTime)\n",
+    "        {\n",
+    "            maxTime -= times[i];\n",
+    "            i += 1;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            requiredPeople += 1;\n",
+    "            maxTime = targetTime;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    return requiredPeople <= numOfPeople;\n",
+    "}\n",
+    "\n",
+    "var times = new List<int> {2,3,5,7};\n",
+    "var result = MinMaxTime(times, 3);\n",
+    "Console.WriteLine($\"You need {result} units of time.\")"
+   ]
   }
  ],
  "metadata": {
