Add basic Tree iimplementation

--- a/DataStructures101/Tree.ipynb
+++ b/DataStructures101/Tree.ipynb
@@ -4,24 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stack\n",
+    "## Tree\n",
     "\n",
     "### Description\n",
-    "A stack is a data structure that follows the *First In Last Out (FILO)* principle. Think of a stack of dirty plates. If you want to start washing them, it makes more sense to grab the plate at the top than the first plate you *stacked* at the bottom.\n",
+    "A Tree is a data structure that is composed of nodes and edges connecting the nodes. Each node holds a value for example an integer, string or objects. The very first node is known as the *root* node. Nodes follow a child and parent relationship. Every node must have one single parent and could have zero or more children nodes. The exception is the root node. Root nodes do not have a parent. Every tree must have a single root node.\n",
     "\n",
     "### Example\n",
-    "In the illustration bellow, block 8 would be the first plate you stacked and block 5 would be the last one you stacked. However, block 5 would be the first plate you wash, and block 8 would be the last one.\n",
-    "![Stack Animation](../illustrations/stackgif.gif)\n",
+    "![Stack Animation](../illustrations/binary-search-tree.jpg)\n",
     "\n",
-    "<font size=\"1\">image source: [deepblade.com](https://deepblade.com/)</font>\n",
-    "\n",
-    "### Operations\n",
-    "This data structure supports 3 major operations:\n",
-    "1. Push (adding elements to the stack)\n",
-    "2. Pop (removing elements from the stack)\n",
-    "3. Peek (looking at the contents of the top element without removing it)\n",
-    "\n",
-    "`C#` and many popular languages have a built in stack implementation. For `C#` we have the `Stack` class. Don't quote me on this, but I am pretty sure many languages use a dynamically sized array under the hood to implement the Stack class. Below you can find a block of code that mimics the behavior of the dirty plates example above."
+    "<font size=\"1\">image source: [FAVPNG.com](https://favpng.com/png_view/node-structure-binary-search-tree-binary-tree-data-structure-png/3pfGkW7p)</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation"
    ]
   },
   {
@@ -40,78 +38,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The plate at the top is number 5\r\n",
-      "washing plate number 5...\r\n",
-      "washing plate number 7...\r\n",
-      "washing plate number 4...\r\n",
-      "washing plate number 8...\r\n",
-      "Done!\r\n"
+      "   2--> root/parent node\r\n",
+      "  * *  \r\n",
+      " 1   3--> children nodes\r\n"
      ]
     }
    ],
    "source": [
-    "using System.Collections.Generic;\n",
-    "\n",
-    "var stack = new Stack<int>();\n",
-    "\n",
-    "// stacking the dirty plates\n",
-    "stack.Push(8);\n",
-    "stack.Push(4);\n",
-    "stack.Push(7);\n",
-    "stack.Push(5);\n",
-    "\n",
-    "\n",
-    "// we can peek at the top plate and it won't be removed from the stack\n",
-    "Console.WriteLine($\"The plate at the top is number {stack.Peek()}\");\n",
-    "\n",
-    "// washing the plates\n",
-    "while (stack.Count > 0)\n",
+    "public class Node<T>\n",
     "{\n",
-    "    var dirtyPlate = stack.Pop();\n",
-    "    Console.WriteLine($\"washing plate number {dirtyPlate}...\");\n",
+    "    public T val;\n",
+    "    public Node<T> left;\n",
+    "    public Node<T> right;\n",
+    "\n",
+    "    public Node(T val, Node<T> left, Node<T> right)\n",
+    "    {\n",
+    "        this.val = val;\n",
+    "        this.left = left;\n",
+    "        this.right = right;\n",
+    "    }\n",
+    "\n",
+    "    public Node(T val) : this(val, null, null) { }\n",
     "}\n",
     "\n",
-    "Console.WriteLine(\"Done!\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Notes\n",
-    "It is important to note that the `while` loop only runs until there are no more elements in the stack. If you attempt to call `Pop()` or `Peek()` on an empty stack you will get an error known as `underflow`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "System.InvalidOperationException: Stack empty.\r\n   at System.Collections.Generic.Stack`1.ThrowForEmptyStack()\r\n   at System.Collections.Generic.Stack`1.Pop()\r\n   at Submission#6.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
-     "output_type": "error",
-     "traceback": [
-      "System.InvalidOperationException: Stack empty.\r\n",
-      "   at System.Collections.Generic.Stack`1.ThrowForEmptyStack()\r\n",
-      "   at System.Collections.Generic.Stack`1.Pop()\r\n",
-      "   at Submission#6.<<Initialize>>d__0.MoveNext()\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
-     ]
-    }
-   ],
-   "source": [
-    "// pretty cool how we can share variables between blocks in these notebooks, huh?\n",
-    "stack.Pop()\n",
-    "// nasty error below"
+    "var leftChildNode = new Node<int>(1);\n",
+    "var rightChildNode = new Node<int>(3);\n",
+    "var rootNode = new Node<int>(2, leftChildNode, rightChildNode);\n",
+    "\n",
+    "\n",
+    "Console.WriteLine($\"   {rootNode.val}--> root/parent node\");\n",
+    "Console.WriteLine($\"  * *  \");\n",
+    "Console.WriteLine($\" {rootNode.left.val}   {rootNode.right.val}--> children nodes\");\n"
    ]
   }
  ],
