Add basic Find method

--- a/DataStructures101/Tree.ipynb
+++ b/DataStructures101/Tree.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "public class Node<T>\n",
+    "public class Node<T> where T : IComparable<T>\n",
     "{\n",
     "    public T val;\n",
     "    public Node<T> left;\n",
@@ -59,6 +59,27 @@
     "    }\n",
     "\n",
     "    public Node(T val) : this(val, null, null) { }\n",
+    "\n",
+    "    public bool Find(Node<T> tree, T val)\n",
+    "    {\n",
+    "        if (tree == null) return false;\n",
+    "\n",
+    "        var compareVal = tree.val.CompareTo(val);\n",
+    "\n",
+    "        if (compareVal == 0)\n",
+    "        {\n",
+    "            return true;\n",
+    "        }\n",
+    "\n",
+    "        if (compareVal > 0)\n",
+    "        {\n",
+    "            return Find(tree.left, val);\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            return Find(tree.right, val);\n",
+    "        }\n",
+    "    }\n",
     "}\n",
     "\n",
     "var leftChildNode = new Node<int>(1);\n",
@@ -68,7 +89,7 @@
     "\n",
     "Console.WriteLine($\"   {rootNode.val}--> root/parent node\");\n",
     "Console.WriteLine($\"  * *  \");\n",
-    "Console.WriteLine($\" {rootNode.left.val}   {rootNode.right.val}--> children nodes\");\n"
+    "Console.WriteLine($\" {rootNode.left.val}   {rootNode.right.val}--> children nodes\");"
    ]
   }
  ],
